--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.5.1
 Mako==0.8.1
 PasteDeploy==1.5.0
 WebOb==1.2.3
+argparse==1.2.1
 beautifulsoup4==4.2.1
 bottle==0.11.6
 distribute==0.7.3
